third skip staging area

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h2>first commit for staging area</h2>
     <h3>second skip staging area</h3>
+    <h4>third skip staging area</h4>
 </body>
 </html>
